<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.tavor.bancointeligente.activities.DepositActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_myaccount_deposit"
                android:id="@+id/switch_myAccount"
                android:layout_margin="18dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/text_account_number"
                android:id="@+id/editText_accountNumber"
                android:layout_margin="18dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/text_holder_name"
                android:ems="10"
                android:id="@+id/editText_holderName"
                android:layout_margin="18dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/text_depositer_name"
                android:ems="10"
                android:id="@+id/editText_depositerName"
                android:layout_margin="18dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText_depositerPhone"
                android:layout_margin="18dp"
                android:hint="@string/text_depositer_phone"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deposit_cash"
                android:id="@+id/checkbox_depositCash"
                android:layout_marginLeft="18dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deposit_document"
                android:id="@+id/checkbox_depositDocument"
                android:layout_marginLeft="18dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/layout_cashDeposit"
                android:layout_margin="18dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$20.000"
                        android:textStyle="bold"
                        android:layout_gravity="center" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText_cash20000"
                        android:layout_margin="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$10.000"
                        android:textStyle="bold"
                        android:layout_gravity="center" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText_10000"
                        android:layout_margin="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$5.000"
                        android:id="@+id/textView"
                        android:textStyle="bold"
                        android:layout_gravity="center" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText_cash5000"
                        android:layout_margin="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$1.000"
                        android:textStyle="bold"
                        android:layout_gravity="center" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText_cash1000"
                        android:layout_margin="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$500"
                        android:textStyle="bold"
                        android:layout_gravity="center" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText_cash500"
                        android:layout_margin="16dp" />

                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/layout_documentDeposit"
            android:layout_margin="18dp">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_bancochile_check"
                    android:id="@+id/radioButton_bancoChileCheck" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_bank_other"
                    android:id="@+id/radioButton_ohterBankCheck" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_promissory_bancochile"
                    android:id="@+id/radioButton_bancoChilePromissory" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_bank_other_promissory"
                    android:id="@+id/radioButton_otherBankPromissory" />
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_document_amount"
                    android:textStyle="bold"
                    android:layout_gravity="center" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText_documentAumont"
                    android:layout_margin="16dp" />

            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save_deposit"
                    android:id="@+id/button_saveDeposit"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_clear_deposit"
                    android:id="@+id/button_clearDeposit" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
