<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/cardview_cashdesk">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:id="@+id/imageView_cashdesk"
                    android:src="@color/background_material_light"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="vertical"
                    android:background="@color/button_default"
                    android:gravity="center|left"
                    android:paddingLeft="16dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_cashdesk"
                        android:id="@+id/textView_cashdesk"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/cardview_executive">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/imageView_executive"
                android:src="@color/background_material_light"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical"
                android:background="@color/button_default"
                android:gravity="center|left"
                android:paddingLeft="16dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_executive"
                    android:id="@+id/textView_executive"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/cardview_sac">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/imageView_procedures"
                android:src="@color/background_material_light"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical"
                android:background="@color/button_default"
                android:gravity="center|left"
                android:paddingLeft="16dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_procedures"
                    android:id="@+id/textView_sac"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/cardview_emergencies"
            android:visibility="gone">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:id="@+id/imageView_emergencies"
                    android:src="@color/background_material_light"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="vertical"
                    android:background="@color/button_default"
                    android:gravity="center|left"
                    android:paddingLeft="16dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_emergencies"
                        android:id="@+id/textView_emergencies"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
